--- a/exercicios/ex022/styles/fundo006.css
+++ b/exercicios/ex022/styles/fundo006.css
@@ -6,13 +6,14 @@ body {
     background-color: black;
     background-image: url('../imagens/wallpaper002.jpg');
     background-position: center center;
-    background-repeat: repeat-y;
+    background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 main {
     background-color: white;
-    width: 400px;
+    max-width: 400px;
     padding: 10px;
     margin: auto;
     border: 1px solid darkblue;
