--- a/desafios/d012/styles/style.css
+++ b/desafios/d012/styles/style.css
@@ -84,3 +84,26 @@ main section.four {
     background-size: cover;
 }
 /*Conteudo Principal*/
+/*Rodapé*/
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 5px;
+}
+
+footer p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+}
+
+footer a {
+    font-weight: bold;
+    text-decoration: none;
+    color: white;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+/*Rodapé*/
