correção de link no header

--- a/desafios/d012/styles/style.css
+++ b/desafios/d012/styles/style.css
@@ -45,6 +45,10 @@ header p a {
     font-weight: 600;
     color: white;
 }
+
+header p a:hover {
+    text-decoration: underline;
+}
 /*Cabeçalho*/
 
 /*Conteudo Principal*/
