--- a/exercicios/ex023/styles/tabela002.css
+++ b/exercicios/ex023/styles/tabela002.css
@@ -22,6 +22,10 @@ thead, tfoot {
     color: white;
 }
 
+tbody > tr:nth-child(odd) {
+    background-color: lightgray;
+}
+
 td {
     text-align: left;
 }
